--- a/projet-3/src/pages/PageAdoption/PageAdoption.css
+++ b/projet-3/src/pages/PageAdoption/PageAdoption.css
@@ -5,3 +5,16 @@
   text-align: center;
   margin: 100px;
 }
+
+input {
+  margin-top: 100px;
+  width: 90vh;
+  height: 50px;
+  border: none;
+
+}
+
+.container {
+  justify-content: center;
+  border: none;
+}
