--- a/projet-3/src/pages/PageAdoption/PageAdoption.css
+++ b/projet-3/src/pages/PageAdoption/PageAdoption.css
@@ -6,11 +6,18 @@
   margin: 100px;
 }
 
-input {
-  margin-top: 100px;
+.input {
+  margin-top: 120px;
   width: 90vh;
   height: 50px;
   border: none;
+
+}
+.input:hover {
+  margin-top: 120px;
+  width: 90vh;
+  height: 50px;
+  border: 3px solid rgb(0, 0, 0);
 
 }
 
