--- a/projet-3/src/pages/PageAdoption/PageAdoption.css
+++ b/projet-3/src/pages/PageAdoption/PageAdoption.css
@@ -8,16 +8,16 @@
 
 .input {
   margin-top: 120px;
-  width: 90vh;
+  background-color: rgb(241, 248, 250);
+  width: 100%;
   height: 50px;
   border: none;
 
 }
 .input:hover {
-  margin-top: 120px;
-  width: 90vh;
-  height: 50px;
-  border: 3px solid rgb(0, 0, 0);
+
+  background-color: rgb(222, 231, 234);
+ 
 
 }
 
