--- a/projet-3/src/pages/QuienesSomos/QuienesSomos.css
+++ b/projet-3/src/pages/QuienesSomos/QuienesSomos.css
@@ -1,12 +1,25 @@
+.quienes-somos-container {
+    max-width: 800px;
+    margin: 100px;
+    padding: 20px;
+}
+
 .header {
-    margin-top: 100px;
+    text-align: center;
+    background-color: #3498db;
+    color: #fff;
+    padding: 10px;
+}
+
+.sectionQuienesSomos {
+    margin-top: 20px;
+    text-align: justify;
 }
 
 .perfil {
-    display:inline-block;
-    margin: 50px;
-}
-
-.title{
-    margin-top: 30px;
+    display: inline-block;
+    width: 100px;
+    border-radius: 50%;
+    margin-top: 10px;
+    align-items: center;
 }
