--- a/projet-3/src/pages/QuienesSomos/QuienesSomos.css
+++ b/projet-3/src/pages/QuienesSomos/QuienesSomos.css
@@ -18,8 +18,6 @@
 
 .perfil {
     display: inline-block;
-    width: 100px;
-    border-radius: 50%;
-    margin-top: 10px;
     align-items: center;
+    margin-inline: 100px;
 }
