--- a/projet-3/src/pages/PageAdoption/PageAdoption.css
+++ b/projet-3/src/pages/PageAdoption/PageAdoption.css
@@ -7,7 +7,8 @@
 }
 
 .input {
-  margin-top: 120px;
+  position: fixed;
+  margin-top: 15px;
   background-color: rgb(241, 248, 250);
   width: 100%;
   height: 50px;
