--- a/projet-3/src/pages/QuienesSomos/QuienesSomos.css
+++ b/projet-3/src/pages/QuienesSomos/QuienesSomos.css
@@ -1,12 +1,10 @@
 .quienes-somos-container {
-    max-width: 800px;
-    margin: 100px;
-    padding: 20px;
+    margin-top: 50px;
 }
 
 .header {
     text-align: center;
-    background-color: #3498db;
+    background-color: #118da0 ;
     color: #fff;
     padding: 10px;
 }
@@ -19,5 +17,5 @@
 .perfil {
     display: inline-block;
     align-items: center;
-    margin-inline: 100px;
+    margin-inline: 50px;
 }
