--- a/projet-3/src/pages/PageVoluntarios/PageVoluntarios.css
+++ b/projet-3/src/pages/PageVoluntarios/PageVoluntarios.css
@@ -5,3 +5,16 @@
   text-align: center;
   margin: 100px;
 }
+
+.ultimatum {
+  margin-top: 200px;
+}
+
+.input2 {
+  position:fixed;
+  margin-top: -85px;
+  background-color: rgb(241, 248, 250);
+  width: 100%;
+  height: 50px;
+  border: none;
+}
