--- a/projet-3/src/index.css
+++ b/projet-3/src/index.css
@@ -3,19 +3,19 @@ a {
   color: #000000;
   text-decoration: inherit;
 }
+
 a:hover {
   color: #2c2c31;
 }
 
 body {
-  margin:0;
+  margin: 0;
   background-color: #ffffff;
-  
+
 }
 
-
-
-
-
-
-
+.leaflet-container {
+  width: 450px;
+  height: 350px;
+  margin-left: 40%;
+}
