--- a/projet-3/src/pages/PageVoluntarios/PageVoluntarios.css
+++ b/projet-3/src/pages/PageVoluntarios/PageVoluntarios.css
@@ -17,4 +17,10 @@
   width: 100%;
   height: 50px;
   border: none;
+  outline: none;
+}
+
+.input2:hover {
+  background-color: rgb(222, 231, 234);
+  border: none;
 }
