--- a/projet-3/src/pages/Contacto/Contacto.css
+++ b/projet-3/src/pages/Contacto/Contacto.css
@@ -1,9 +1,10 @@
 .contacto {
     display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
+    justify-content: center;
+    align-items: center;
     max-width: 1200px;
     margin: 20px;
+    margin-top: 10%;
 
 }
 
@@ -13,7 +14,7 @@
     color: #fff;
     padding: 10px;
     margin-top: 120px;
-    max-width: 100vw;
+    width: 100vw;
 }
 
 .main {
@@ -22,7 +23,7 @@
 }
 
 .line {
-    border-top: 1px solid #0c0b0b; /* Adjust the color as needed */
+    border-top: 1px solid #0c0b0b;
     margin-bottom: 10px; 
 }
 
@@ -55,9 +56,9 @@ input, select, textarea {
 }
 
 select {
-    appearance: none; /* Remove default arrow in Firefox */
-    padding-right: 30px; /* Add space for custom arrow */
-    background-image: url('arrow-down.png'); /* Custom arrow image */
+    appearance: none; 
+    padding-right: 30px; 
+    background-image: url('arrow-down.png'); 
     background-repeat: no-repeat;
     background-position: right center;
 }
@@ -69,4 +70,8 @@ button {
     border: none;
     border-radius: 5px;
     cursor: pointer;
+}
+
+#principal {
+    margin-bottom: 10% ;
 }
