--- a/projet-3/src/components/Footer/Footer.css
+++ b/projet-3/src/components/Footer/Footer.css
@@ -1,5 +1,5 @@
 .footer-link {
   color: white;
-  text-decoration: none; /* Para quitar la subrayado por defecto de los enlaces */
+  text-decoration: none;
 }
 
