--- a/projet-3/src/pages/QuienesSomos/QuienesSomos.css
+++ b/projet-3/src/pages/QuienesSomos/QuienesSomos.css
@@ -1,30 +1,9 @@
-.quienes-somos-container {
-    margin-top: 50px;
-    text-align: center;
-}
-
-.header {
-    text-align: center;
-    background-color: #118da0;
-    color: #fff;
-    padding: 10px;
-}
-
 .sectionQuienesSomos {
-    margin-top: 20px;
+    margin-top: 10px;
+    width: 1360px;
     text-align: center;
-}
-
-.perfil {
-    display: inline-block;
-    align-items: center;
-    margin-inline: 50px;
 }
 
 #principal {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     text-align: center;
-    width: 100vw;
 }
